# Inside of setup.cfg
[metadata]
name = Data_Stats
version = 0.1
author = Iñigo Ugarte & Paulo Cagigal
description = This library consists of obtaining data from an open database "statsbombpy"
url = https://github.com/pauloo1010/Paulo-Inigo-Progra
keywords = Dataset, Easy-working, Open
description-file = README.md